fix : change html scrollbar color

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -28,7 +28,7 @@ html::-webkit-scrollbar-thumb
 {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #D62929;
+	background-color: #D7CECD;
 }
 
 
